--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
 }
 
 dependencies{
+    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.3.8.RELEASE'
     compile('commons-lang:commons-lang:2.6')
     compile('com.google.guava:guava:18.0')
