--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,18 @@ repositories {
 }
 
 dependencies{
-    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '1.3.8.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '1.3.8.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-velocity', version: '1.3.8.RELEASE'
+    compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'
+    compile group: 'org.aspectj', name: 'aspectjrt', version: '1.8.9'
     compile('commons-lang:commons-lang:2.6')
+    compile('com.alibaba:fastjson:latest.integration')
     compile('com.google.guava:guava:18.0')
     compile('com.aliyun.oss:aliyun-sdk-oss:2.4.0')
+    compile 'mysql:mysql-connector-java:5.1.9'
+    compile 'org.mybatis:mybatis:3.3.1'
+    compile 'org.mybatis:mybatis-spring:1.2.3'
+    compile 'c3p0:c3p0:0.9.1.2'
     testCompile 'junit:junit:4.+'
 }
