--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-#tomcatserver.port=8888server.tomcat.uri-encoding=UTF-8server.tomcat.protocol_header=x-forwarded-proto#springspring.jmx.enabled=false#logginglogging.path=${user.home}/logs/uedspring.mvc.view.prefix=/WEB-INF/jsp/spring.mvc.view.suffix=.jsp
+#tomcatserver.port=8888server.tomcat.uri-encoding=UTF-8server.tomcat.protocol_header=x-forwarded-proto#springspring.jmx.enabled=false#logginglogging.path=${user.home}/logs/ued
