--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies{
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-velocity', version: '1.3.8.RELEASE'
     compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.9'
     compile group: 'org.aspectj', name: 'aspectjrt', version: '1.8.9'
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.1'
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile('commons-lang:commons-lang:2.6')
     compile('com.alibaba:fastjson:latest.integration')
     compile('com.google.guava:guava:18.0')
