--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ apply plugin: 'maven'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
+jar {
+    manifest {attributes 'Main-Class': 'cn.com.duiba.Application'}
+}
 
 repositories {
     mavenLocal()
