--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'cn.com.duiba'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-apply plugin: 'war'
+apply plugin: 'jar'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'maven'
