--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,16 @@ buildscript {
     repositories {
         mavenLocal()
         maven { url "http://nexus.dui88.com:8081/nexus/content/groups/public/" }
+        maven { url "http://repo.maven.apache.org/maven2" }
+        maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
     }
+    classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
     dependencies { classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.8.RELEASE") }
 }
 
 jar {
+    baseName = 'ued'
     version =  '1.0'
     manifest { attributes 'Main-Class': 'cn.com.duiba.Application' }
 }
@@ -51,4 +55,8 @@ dependencies{
     compile 'org.mybatis:mybatis-spring:1.2.3'
     compile 'c3p0:c3p0:0.9.1.2'
     testCompile 'junit:junit:4.+'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
