--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,11 @@ buildscript {
         maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
     }
-    classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
-    dependencies { classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.8.RELEASE") }
+
+    dependencies {
+        classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.8.RELEASE")
+    }
 }
 
 jar {
