--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'maven'
-
+apply plugin: 'spring-boot'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -21,10 +21,10 @@ buildscript {
 
     dependencies {
         classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.8.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.5.RELEASE")
     }
 }
-apply plugin: 'spring-boot'
+
 
 jar {
     baseName = 'ued'
@@ -39,6 +39,7 @@ bootRepackage {
 repositories {
     mavenLocal()
     maven { url "http://nexus.dui88.com:8081/nexus/content/groups/public/"}
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
     mavenCentral()
 }
 
